Обновил города, описание в попапе

--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,11 @@
     </head>
 
     <body style="width:200px;padding:10px;">
+        Перейдите на сайт <a href="https://www.dns-shop.ru/" target="_blank">магазина DNS</a>.<br>
         Откройте страницу с желаемым товаром.<br>
         Около цены товара нажмите на знак вопроса.<br>
-        Ожидайте завершения работы скрипта.
+        Ожидайте завершения работы скрипта.<br>
+        Знак плюса означает доступность товара в данном городе.<br>
+        Знак минус - товар в данном городе купить нельзя.
     </body>
 </html>
